[package]
name = "mapant-fr-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
cassini = "0.4.4"
reqwest = { version = "0.12.12", features = [
    "native-tls-vendored",
    "blocking",
    "multipart",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.117"
tar = "0.4"
bzip2 = "0.5"
dotenv = "0.15"
clap = { version = "4.5.7", features = ["derive"] }
