[package]
name = "mapant-fr-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
cassini = "0.7.1"
reqwest = { version = "0.12.12", features = [
    "native-tls-vendored",
    "blocking",
    "multipart",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.117"
tar = "0.4"
xz2 = "0.1.7"
dotenv = "0.15"
clap = { version = "4.5.7", features = ["derive"] }
image = "0.25.5"
log = "0.4.25"
env_logger = "0.11"
